--- a/BeneluxWebb/templates/esea/esea_potw.html
+++ b/BeneluxWebb/templates/esea/esea_potw.html
@@ -3,12 +3,12 @@
     {% for stat in top_stats %}
         <div class="potw-item carousel-item {% if loop.first %}active{% endif %}">
             <!-- <img src="{{ url_for('static', filename='img/esea/PlayerOfTheWeek.webp') }}" class="d-block w-100" alt="Player of the Week"/> -->
+            <img src="{{ url_for('static', filename='img/potw/' ~ stat.stat ~ '.png') }}"
+                class="icon-bg"
+                data-placeholder="{{ url_for('static', filename='img/potw/penta_kills.png') }}"
+                onerror="this.onerror=null;this.src=this.dataset.placeholder;"/>
+
             <div class="potw-top">
-                <!-- <img src="{{ stat.player['avatar'] }}"
-                    class="potw-avatar"
-                    alt="Player of the Week"
-                    data-placeholder="{{ url_for('static', filename='img/faceit/player_avatar_placeholder.jpg') }}"
-                    onerror="this.onerror=null;this.src=this.dataset.placeholder;"/> -->
                 <img src="{{ url_for('static', filename='img/flags/' ~ stat.player['country']|lower ~ '.png') }}"
                     alt="{{ stat.player['country']|lower }}" style="height:20px;">
                 
@@ -24,7 +24,7 @@
 
     <div class="potw-indicators carousel-indicators">
         {% for stat in top_stats %}
-        <button type="button" data-bs-target="#playerOfTheWeek" data-bs-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %}" aria-current="{% if loop.first %}true{% else %}false{% endif %}" aria-label="Slide {{ loop.index }}"></button>
+        <button type="button" data-bs-target="#playerOfTheWeek" data-bs-slide-to="{{ loop.index0 }}" class="potw-indicator-btn {% if loop.first %}active{% endif %}" aria-current="{% if loop.first %}true{% else %}false{% endif %}" aria-label="Slide {{ loop.index }}"></button>
         {% endfor %}
     </div>
 
