Added socketio JS in base

--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -119,6 +119,13 @@
       </div>
     </footer>
 
+
+  <!-- Connect to SocketIO -->
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+  <script>
+    const socket = io();
+  </script>
+  
   <!-- JS: jQuery first -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
