Moved around items on sidebar and removed id from "matches_sidebar"

--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -19,19 +19,7 @@
 <!-- center-aligned tabs -->
 <div class="esea-page-wrapper">
   <div class="sidebar left">
-    <!-- Discord link -->
-    <div class="sidebar-content">
-      <div class="sidebar-header hoverable">
-        <a href="https://discord.gg/9xzsGTGhjm" 
-            target="_blank" 
-            rel="noopener noreferrer" 
-            style="margin: 10px 5px" 
-            onclick="plausible('Discord Join Click')">
-          <img src="{{ url_for('static', filename='img/join_discord.png') }}" alt="Join the Discord" class="img-fluid sidebar-discord"/>
-        </a>
-      </div>
-    </div>
-
+    <!-- Player Highlights -->
     <div class="sidebar-content">
       <div class="sidebar-header">
         <span> Player Highlights </span>
@@ -41,14 +29,16 @@
       </div>
     </div>
 
+    <!-- Streams -->
     <div class="sidebar-content">
       <div class="sidebar-header">
         <span> Streams </span>
       </div>
       <div class="sidebar-body">
-        {% include 'macros/streams.html' %}
+        {% include 'macros/streams/streams.html' %}
       </div>
     </div>
+
   </div>
 
   <div class="esea-wrapper">
@@ -104,8 +94,26 @@
       <div class="text-muted">Loading...</div>
     </div>
   </div>
-  <div class="sidebar right" id="matches-sidebar">
-    {% include 'esea/esea_matches.html' %}
+  <div class="sidebar right">
+    
+    <!-- Discord link -->
+    <div class="sidebar-content">
+      <div class="sidebar-header hoverable">
+        <a href="https://discord.gg/9xzsGTGhjm" 
+            target="_blank" 
+            rel="noopener noreferrer" 
+            style="margin: 10px 5px" 
+            onclick="plausible('Discord Join Click')">
+          <img src="{{ url_for('static', filename='img/join_discord.png') }}" alt="Join the Discord" class="img-fluid sidebar-discord"/>
+        </a>
+      </div>
+    </div>
+
+    <!-- Matches -->
+    <div class="sidebar-content" id="matches-sidebar">
+      {% include 'esea/esea_matches.html' %}
+    </div>
+
   </div>
 </div>
 
