--- a/BeneluxWebb/templates/macros/streams/streams_partial.html
+++ b/BeneluxWebb/templates/macros/streams/streams_partial.html
@@ -8,8 +8,12 @@
             <div class="stream-item" data-user="{{ stream['user_name'] }}" data-userid="{{ stream['user_id'] }}">
                 <div class="stream-header">
                     <a href="https://twitch.tv/{{ stream['user_name'] }}" target="_blank" class="stream-link">
-                        {% if "team" in stream['streamer_type'] %}
-                            <img src="{{ url_for('static', filename='img/esea/esea_logo.png') }}" alt="Team Stream" class="twitch-team-icon"/>
+                        {% if stream['streamer_type'] %}
+                            {% if "team" in stream['streamer_type'] or "esea" in stream['streamer_type'] %}
+                                <img src="{{ url_for('static', filename='img/esea/esea_logo.png') }}" alt="Team Stream" class="twitch-team-icon"/>
+                            {% else %}
+                                <i class="bi bi-twitch"></i>
+                            {% endif %}
                         {% else %}
                             <i class="bi bi-twitch"></i>
                         {% endif %}
@@ -24,7 +28,7 @@
                     <div id="twitch-embed-{{ stream['user_id'] }}" class="twitch-embed"></div>
                     
                     <div class="thumbnail-wrapper">
-                        <img src="{{ stream['thumbnail_url'].replace('{width}', '320').replace('{height}', '180') }}"
+                        <img src="{{ stream['thumbnail_url'].replace('{width}', '320').replace('{height}', '180') if stream['thumbnail_url'] else '' }}"
                             class="thumbnail-image" 
                             alt="Stream thumbnail for {{ stream['user_name'] }}">
                         <i class="thumbnail-icon bi bi-eye"></i>
