--- a/BeneluxWebb/static/css/components/filters/select_picker.css
+++ b/BeneluxWebb/static/css/components/filters/select_picker.css
@@ -4,6 +4,71 @@
   border-radius: 0px;
 }
 
+/* Custom select picker */
+.select-picker-container {
+  width: 100%;
+  height: 33px;
+  position: relative;
+}
+
+.select-button {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding-inline: 8px;
+  border: 1px solid var(--border);
+}
+.select-button:hover {
+  cursor: pointer;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2));
+}
+
+.select-picker-container .select-dropdown {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  background-color: var(--background);
+  width: 100%;
+  height: 100px;
+  overflow-y: scroll;
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.2);
+  border-bottom-left-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+}
+.select-picker-container .select-dropdown.show {
+  display: block;
+}
+
+.select-option-item {
+  width: 100%;
+  padding: 2px 8px;
+  text-align: center;
+}
+.select-option-item:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2));
+}
+.select-option-item.selected {
+  background-color: var(--secondary);
+}
+
+.select-option-label {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.select-option-checkbox {
+  display: none;
+}
+
+
+
+
+
+
+
+
 .sidebar-body .bootstrap-select .btn {
   position: relative;
   box-sizing: border-box;
