--- a/BeneluxWebb/static/css/pages/esea/esea_card_details.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_card_details.css
@@ -10,16 +10,24 @@
   gap: 8px;
 
   width: 100%;
-  height: auto;
-
-  border-top: 2px solid var(--secondary-light2);
+  max-height: 0;
   
   margin-left: 0;
   margin-right: 0;
-  margin-top: 8px;
-  padding-top: 8px;
 
   font-size: .9rem;
+
+  overflow: hidden;
+  opacity: 0;
+
+  transition: all .5s ease;
+}
+.collapse-body.show {
+  padding-top: 8px;
+  margin-top: 8px;
+  border-top: 2px solid var(--secondary-light2);
+  max-height: 1000px;
+  opacity: 1;
 }
 
 
@@ -200,7 +208,7 @@
 /* === Team statistics === */
 .maps-box {
   display: grid;
-  grid-template-columns: repeat(7, minmax(0, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
 
   width: 100%;
   height: auto;
