--- a/BeneluxWebb/static/css/pages/esea/esea_cards.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_cards.css
@@ -348,32 +348,33 @@
 /* === Details button styling === */
 .details-btn {
   display: flex;
-
-  height: 100%;
-  width: var(--details-btn-width);
-
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.details-btn button {
-  display: flex; 
   align-items: center;
   justify-content: center;
 
-  width: 100%;
   height: 100%;
+  width: var(--details-btn-width);
 
   background-color: var(--secondary-light2);
   border: 1px solid var(--border);
   border-radius: var(--border-radius-sm);
 
+  padding: 10px;
+
   color: var(--text);
-  transition: background-color 0.3s ease;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  transition: background-color 0.3s ease, transform 0.1s ease;
 }
-.details-btn button:hover {
+.details-btn:hover {
   background-color: var(--accent);
 }
+.details-btn:active {
+  scale: 0.95;
+}
+
 
 @media screen and (max-width: 992px) {
   :root {
