--- a/BeneluxWebb/static/css/components/sidebar.css
+++ b/BeneluxWebb/static/css/components/sidebar.css
@@ -11,9 +11,9 @@
 
     font-size: 0.9em;
 
-    gap: 10px;
+    gap: 4px;
 
-    padding: 8px;
+    padding: 4px;
 }
 
 /* === Sidebar content styling === */
@@ -26,7 +26,7 @@
     width: 100%;
     height: auto;
     background-color: var(--secondary-dark5);
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius-sm);
 }
 
 .sidebar-header {
