--- a/BeneluxWebb/static/css/components/streams.css
+++ b/BeneluxWebb/static/css/components/streams.css
@@ -30,8 +30,8 @@
   color: inherit;
   text-decoration: none;
 }
-.stream-link:hover > .bi.bi-twitch {
-  color: var(--accent);
+.stream-link:hover > * {
+  color: var(--accent) !important;
   font-size: 1.1em;
 }
 .stream-item .bi.bi-twitch {
@@ -41,6 +41,11 @@
 .twitch-team-icon {
   width: 15px;
   border-radius: 3px;
+  transition: all 0.2s ease;
+}
+.stream-item .bi.bi-mic-fill {
+  color: var(--primary);
+  transition: all 0.2s ease;
 }
 
 .streamer-name {
